--- a/2022-2023/Programming Level-up/style.css
+++ b/2022-2023/Programming Level-up/style.css
@@ -5,6 +5,6 @@ h2 {padding-bottom: 15px; margin-left: -50px; font-size: 1.7em;}
 p {-moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased !important; -moz-font-smoothing: antialiased !important; text-rendering: optimizelegibility !important; letter-spacing: .03em;}
 .org-src-container {line-height: initial;}
 div#postamble {margin-left:-80px;margin-top:100px;}
-pre {border: 1px solid #b1b1b1;}
-a {color: #2d55cb;}
-a:visted {color: #2d55cb;}
+pre {color: white; border-radius:10px;background-color:#191825;}
+a {color: #2456ec;}
+a:visted {color: #2456ec;}
