Make the style more readable

--- a/2023-2024/Programming Level-up/style.scss
+++ b/2023-2024/Programming Level-up/style.scss
@@ -1,3 +1,9 @@
 /*-- scss:defaults --*/
 
 $sidebar-bg: rgb(184, 199, 220);
+
+/*-- scss:rules --*/
+
+div.sourceCode {
+    background-color: #f2f2f2;
+}
